# go-links

./: Cargo.toml  go-links.db  schema.sql
src/: main.rs  schema.sql
templates/: index.html
