[package]
name = "go-links"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"        # Web framework
rusqlite = "0.36.0"      # SQLite interface
serde = { version = "1.0", features = ["derive"] }
askama = "0.14.0"        # Templating engine
nanoid = "0.4.0"         # Simple ID generation
env_logger = "0.11.8"
log = "0.4.27"
